--- a/CSS/style.css
+++ b/CSS/style.css
@@ -62,7 +62,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-right: 15%;
+    margin-right: 5%;
 }
 
 /* Button Join Sekarang */
@@ -738,4 +738,31 @@ body {
 
 .box-footer>p {
     color: #fff;
+}
+
+/* Responsive 1024px - 1440px */
+@media only screen and (min-width: 1024px) and (max-width: 1440px) {
+    .navbar-menu {
+        display: flex;
+        list-style-type: none;
+        gap: 16px;
+        padding-right: 16px;
+        color: #fff;
+        font-size: 16px;
+    }
+    .header-title>h1 {
+        font-size: 30px;
+    }
+    .header-title>p {
+        font-size: 16px;
+        padding-top: 14px;
+    }
+    .header-wrapper-left {
+        display: flex;
+        flex-direction: column;
+        width: 35%;
+        gap: 50px;
+        margin-top: 3%;
+        margin-bottom: 3%;
+    }
 }
