--- a/CSS/style.css
+++ b/CSS/style.css
@@ -741,7 +741,7 @@ body {
 }
 
 /* Responsive 1024px - 1440px */
-@media only screen and (min-width: 1024px) and (max-width: 1440px) {
+@media only screen and (max-width: 1440px) {
     .navbar-menu {
         display: flex;
         list-style-type: none;
@@ -749,6 +749,20 @@ body {
         padding-right: 16px;
         color: #fff;
         font-size: 16px;
+    }
+    .logo {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        margin-left: 10%;
+        padding: 0;
+    }
+    .right-navbar {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0;
     }
     .header-title>h1 {
         font-size: 30px;
@@ -764,5 +778,381 @@ body {
         gap: 50px;
         margin-top: 3%;
         margin-bottom: 3%;
+    }
+    .hamburger {
+        display: none;
+    }
+    .tentang-kami-container {
+        height: auto;
+    }
+    .right-article>button {
+        background-color: transparent;
+        color: #47B2E4;
+        border: 1px solid #47B2E4;
+        border-radius: 24px;
+        width: 100%;
+        padding: 10px;
+        border-radius: 10px;
+        margin-bottom: 5%;
+    }
+    .text-business-wrapper {
+        display: flex;
+        justify-content: space-between;
+        background-color: #fff;
+        width: 100%;
+        padding-right: 5px;
+    }
+    .card-business {
+        background-color: #fff;
+        display: flex;
+        flex-direction: column;
+        width: 20%;
+        height: 250px;
+        gap: 10px;
+        padding: 24px;
+        box-shadow: 1px 1px 20px 1px #37517E;
+        color: #37517E;
+    }
+    .card-pb-wrapper {
+        background-color: #fff;
+        width: 100%;
+        height: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+        box-shadow: 1px 1px 20px 1px #37517E;
+        flex-wrap: wrap;
+    }
+    .below-card-wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 15%;
+        margin-right: 15%;
+        gap: 15%;
+        margin-top: 5%;
+        padding-bottom: 5%;
+    }
+    .card-plan-container {
+        display: flex;
+        justify-content: center;
+        gap: 20px;
+        margin-top: 48px;
+        position: relative;
+    }
+    .menu-content button {
+        background-color: transparent;
+        color: #47B2E4;
+        border: 1px solid #47B2E4;
+        border-radius: 24px;
+        padding: 10px 20px;
+        width: 15%;
+        margin-top: 24px;
+    }
+    .contact-container-main {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 5%;
+        margin-left: 5%;
+        margin-right: 5%;
+        margin-top: 5%;
+    }
+}
+
+@media only screen and (max-width: 1023px) {
+    .hamburger {
+        display: inline-block;
+        cursor: pointer;
+        background-color: transparent;
+        border: none;
+        margin-right: 24px;
+    }
+    .bar1,
+    .bar2,
+    .bar3 {
+        width: 30px;
+        height: 3px;
+        background-color: #fff;
+        border-radius: 15px;
+        margin: 8px;
+        transition: .5s;
+    }
+    .change .bar1 {
+        transform: translate(0, 11px) rotate(-45deg);
+    }
+    .change .bar2 {
+        opacity: 0;
+    }
+    .change .bar3 {
+        transform: translate(0, -11px) rotate(45deg);
+    }
+    .right-navbar {
+        display: none;
+    }
+    .logo {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        padding-left: 5%;
+    }
+    .header-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column-reverse;
+    }
+    .header-wrapper-right {
+        width: 50%;
+        margin-top: 5%;
+        padding-left: 0;
+    }
+    .header-wrapper-left {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        gap: 50px;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        margin-top: 24px;
+        margin-bottom: 24px;
+    }
+    .header-title>p {
+        font-size: 18px;
+        padding-top: 12px;
+    }
+    .tentang-kami-container {
+        height: auto;
+        width: 100%;
+    }
+    .article-container {
+        display: flex;
+        gap: 24px;
+        margin-top: 48px;
+        color: #4F4F4F;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .left-article {
+        display: flex;
+        flex-direction: column;
+        width: 70%;
+        text-align: justify;
+        justify-content: center;
+        align-items: center;
+        margin-left: 0;
+    }
+    .right-article {
+        display: flex;
+        flex-direction: column;
+        width: 50%;
+        text-align: justify;
+        margin-right: 0;
+        margin-bottom: 5%;
+        gap: 48px;
+        justify-content: center;
+        align-items: center;
+    }
+    .right-article>button {
+        background-color: transparent;
+        color: #47B2E4;
+        border: 1px solid #47B2E4;
+        border-radius: 24px;
+        width: 70%;
+        padding: 10px;
+        border-radius: 10px;
+    }
+    .business-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        /* margin-left: 5%; */
+        /* margin-right: 5%; */
+        gap: 10%;
+        flex-direction: column-reverse;
+    }
+    .business-left {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+    .text-business-wrapper {
+        display: flex;
+        justify-content: space-between;
+        background-color: #fff;
+        width: 80%;
+        padding-right: 5px;
+    }
+    .card-text-business {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        width: 100%;
+        margin-left: 20%;
+    }
+    .business-section {
+        background-color: #F3F5FA;
+        width: 100%;
+        height: auto;
+    }
+    .business-wrapper-card {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 48px;
+        margin-top: 5%;
+        padding-bottom: 5%;
+    }
+    .card-business {
+        background-color: #fff;
+        display: flex;
+        flex-direction: column;
+        width: 50%;
+        height: auto;
+        gap: 10px;
+        padding: 24px;
+        box-shadow: 1px 1px 20px 1px #37517E;
+        color: #37517E;
+    }
+    .text-content {
+        color: #4F4F4F;
+        font-weight: 500;
+        text-align: center;
+        width: 100%;
+        margin-left: 0;
+        margin-right: 0;
+        margin-top: 18px;
+    }
+    .menu-content {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 24px;
+    }
+    .menu-content button {
+        background-color: transparent;
+        color: #47B2E4;
+        border: 1px solid #47B2E4;
+        border-radius: 24px;
+        padding: 10px 20px;
+        width: 15%;
+        margin-top: 24px;
+    }
+    .grid-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+        gap: 10px;
+        margin-left: 15%;
+        margin-right: 15%;
+        margin-top: 48px;
+        margin-bottom: 5%;
+    }
+    #photo1 {
+        grid-column: 1 / span 5;
+    }
+    #photo2 {
+        grid-column: 6 / span 8;
+    }
+    #photo4 {
+        grid-column: 1 / span 4;
+        grid-row: 2;
+    }
+    #photo6 {
+        grid-column: 1 / span 4;
+        grid-row: 3;
+    }
+    #photo3 {
+        grid-column: 1 / span 5;
+        grid-row: 4;
+    }
+    #photo5 {
+        grid-column: 5 / span 8;
+        grid-row: 2 / span 2;
+    }
+    #photo7 {
+        grid-column: 6 / span 8;
+        grid-row: 4;
+    }
+    .card-pb-container {
+        display: flex;
+        flex-direction: column;
+        grid-template-columns: 50% 50%;
+        gap: 20px;
+        margin-left: 15%;
+        margin-right: 15%;
+        margin-top: 48px;
+    }
+    .below-card-wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-left: 15%;
+        margin-right: 15%;
+        gap: 15%;
+    }
+    .below-card-wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-left: 15%;
+        margin-right: 15%;
+        gap: 15%;
+        padding-bottom: 5%;
+    }
+    .text-content {
+        color: #4F4F4F;
+        font-weight: 500;
+        text-align: center;
+        width: 100%;
+        margin-left: 0;
+        margin-right: 0;
+        margin-top: 18px;
+        margin-bottom: 5%;
+    }
+    .card-plan-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 20px;
+        margin-top: 48px;
+        width: 70%;
+        height: 100%;
+        margin: auto;
+    }
+    .box-question {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: #fff;
+        width: 80%;
+        padding: 10px;
+    }
+    .contact-container-main {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 48px;
+        margin-left: 15%;
+        margin-right: 15%;
+        margin-top: 5%;
+    }
+    .footer-container {
+        display: flex;
+        gap: 5%;
+        margin-left: 5%;
+        margin-right: 5%;
+        margin-top: 5%;
+        padding-bottom: 5%;
     }
 }
