--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1155,4 +1155,125 @@ body {
         margin-top: 5%;
         padding-bottom: 5%;
     }
+    .box-footer {
+        background-color: #37517E;
+        margin-top: 5%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        height: 100px;
+        font-size: 10px;
+    }
+}
+
+/* Responsive mobile */
+@media only screen and (max-width: 426px) {
+    .logo {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        padding-left: 0;
+        margin-left: 5%;
+    }
+    .certification img {
+        width: 20%;
+    }
+    .right-article>button {
+        background-color: transparent;
+        color: #47B2E4;
+        border: 1px solid #47B2E4;
+        border-radius: 24px;
+        width: 100%;
+        padding: 10px;
+        border-radius: 10px;
+    }
+    .right-article {
+        display: flex;
+        flex-direction: column;
+        width: 80%;
+        text-align: justify;
+        margin-right: 0;
+        margin-bottom: 5%;
+        gap: 48px;
+        justify-content: center;
+        align-items: center;
+    }
+    .menu-content button {
+        background-color: transparent;
+        color: #47B2E4;
+        border: 1px solid #47B2E4;
+        border-radius: 24px;
+        padding: 10px 20px;
+        width: 20%;
+        margin-top: 24px;
+    }
+    .grid-container {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        margin-left: 15%;
+        margin-right: 15%;
+        margin-top: 48px;
+        margin-bottom: 5%;
+    }
+    .contact-container-left {
+        border-bottom: 10px solid #47B2E4;
+        border-top: 10px solid #47B2E4;
+        border-radius: 10px;
+        box-shadow: 1px 1px 20px 1px #37517E;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 48px;
+        padding: 48px;
+        font-size: 12px;
+    }
+    .map>img {
+        position: relative;
+        width: 100%;
+        height: 100%;
+    }
+    .contact-wrapper-right {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 48px;
+        font-size: 12px;
+    }
+    .footer-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 24px;
+        margin-top: 5%;
+        padding-bottom: 5%;
+        align-items: center;
+    }
+    .footer-wrapper-1 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 100%;
+        gap: 24px;
+    }
+    .footer-wrapper-2 {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+    .footer-wrapper-3 {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+    .box-footer {
+        background-color: #37517E;
+        margin-top: 5%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        height: 100px;
+        font-size: 10px;
+    }
 }
