revise styling, layout, fix margin and padding, add border radius, change color box shadow. This is for dekstop version 1440p

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,13 +12,19 @@ body {
     src: url(/assets/font/Inter/static/Inter-Regular.ttf);
 }
 
+/* Humbuerger button */
+.toggle-btn {
+     display: none;
+}
+
 /* Navbar Content */
 .navbar {
     background-color: #37517E;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     height: 70px;
+    gap: 100px;
 }
 
 /* Logo */
@@ -27,7 +33,6 @@ body {
     justify-content: center;
     align-items: center;
     gap: 10px;
-    padding-left: 15%;
 }
 
 /* Logo-title */
@@ -62,7 +67,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 5%;
 }
 
 /* Button Join Sekarang */
@@ -81,7 +85,7 @@ body {
 
 .header-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -92,10 +96,7 @@ body {
     gap: 50px;
 }
 
-.header-wrapper-right {
-    width: 35%;
-    padding-left: 10%;
-}
+/* .header-wrapper-right {} */
 
 .header-wrapper-right>img {
     position: relative;
@@ -155,7 +156,7 @@ body {
 
 /* Tentang Kami */
 .tentang-kami-container {
-    height: 400px;
+    height: auto;
 }
 
 .title-content {
@@ -167,6 +168,7 @@ body {
     gap: 24px;
     margin-top: 48px;
     color: #4F4F4F;
+    margin-bottom: 24px;
 }
 
 .title-content>h2 {
@@ -225,9 +227,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 5%;
-    margin-right: 5%;
-    gap: 10%;
 }
 
 .business-left {
@@ -254,6 +253,7 @@ body {
     background-color: #fff;
     width: 80%;
     padding-right: 5px;
+    border-radius: 12px;
 }
 
 .business-text {
@@ -270,8 +270,8 @@ body {
 .business-wrapper-card {
     display: flex;
     justify-content: center;
-    align-items: center;
-    gap: 48px;
+    align-items: stretch;
+    gap: 24px;
     margin-top: 5%;
 }
 
@@ -279,17 +279,18 @@ body {
     background-color: #fff;
     display: flex;
     flex-direction: column;
-    width: 15%;
-    height: 200px;
+    width: 20%;
     gap: 10px;
     padding: 24px;
-    box-shadow: 1px 1px 20px 1px #37517E;
+    box-shadow: 1px 1px 20px 1px #ccc;
     color: #37517E;
+    height: auto;
+    border-radius: 12px;
 }
 
 .card-business>img {
     position: relative;
-    width: 10%;
+    width: 20%;
 }
 
 /* Produk Kami Section */
@@ -306,7 +307,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 48px;
+    gap: 24px;
+    margin-top: 24px;
 }
 
 .menu-content button {
@@ -315,8 +317,7 @@ body {
     border: 1px solid #47B2E4;
     border-radius: 24px;
     padding: 10px 20px;
-    width: 5%;
-    margin-top: 24px;
+    width: 92px;
 }
 
 /* Grid Photo Produk Kami */
@@ -325,6 +326,7 @@ body {
     height: auto;
     vertical-align: middle;
     display: inline-block;
+    border-radius: 12px;
 }
 
 .grid-container>div {
@@ -407,7 +409,8 @@ body {
     justify-content: center;
     align-items: center;
     padding: 20px;
-    box-shadow: 1px 1px 20px 1px #37517E;
+    box-shadow: 1px 1px 20px 1px #ccc;
+    border-radius: 12px;
 }
 
 .card-pb-wrapper>div>h3 {
@@ -450,15 +453,21 @@ body {
     justify-content: center;
     gap: 20px;
     margin-top: 48px;
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: auto;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .card-plan-wrapper {
     background-color: #fff;
-    box-shadow: 1px 1px 20px 1px #37517E;
-    padding: 20px 100px 20px 10px;
+    box-shadow: 1px 1px 20px 1px #ccc;
+    padding: 24px;
     margin-bottom: 5%;
+    width: 380px;
+    height: auto;
+    border-radius: 12px;
 }
 
 .card-plan-wrapper>div {
@@ -503,9 +512,7 @@ body {
     border: none;
     border-radius: 24px;
     padding: 10px 20px;
-    margin-top: 30%;
-    margin-bottom: 10%;
-    width: 50%;
+    margin-top: 48px;
 }
 
 /* Pertanyaan Section */
@@ -530,6 +537,7 @@ body {
     background-color: #fff;
     width: 50%;
     padding: 10px;
+    border-radius: 12px;
 }
 
 /* KONTAK SECTION */
@@ -538,17 +546,18 @@ body {
     border-top: 10px solid #47B2E4;
     border-radius: 10px;
     box-shadow: 1px 1px 20px 1px #37517E;
-    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 48px;
-    padding: 48px;
+    padding: 24px;
 }
 
 .contact-wrapper-left {
     display: flex;
     align-items: center;
     gap: 24px;
+    width: 572px;
+    height: auto;
 }
 
 .contact-wrapper-left>div>img {
@@ -573,11 +582,15 @@ body {
 .contact-container-main {
     display: flex;
     justify-content: center;
-    align-items: center;
-    gap: 5%;
-    margin-left: 15%;
-    margin-right: 15%;
-    margin-top: 5%;
+    align-items: stretch;
+    gap: 48px;
+    margin-top: 48px;
+}
+
+.map>img {
+    position: relative;
+    object-fit: cover;
+    width: 100%;
 }
 
 .contact-container-right {
@@ -585,15 +598,15 @@ body {
     border-top: 10px solid #47B2E4;
     border-radius: 10px;
     box-shadow: 1px 1px 20px 1px #37517E;
-    width: 100%;
-    height: 730px;
+    width: 572px;
+    height: auto;
 }
 
 .contact-wrapper-right {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 48px;
+    padding: 24px;
 }
 
 .input {
@@ -608,7 +621,8 @@ body {
 
 .wrapper-1 {
     display: flex;
-    gap: 15%;
+    flex-direction: column;
+    gap: 24px;
 }
 
 .wrapper-2 {
@@ -740,540 +754,10 @@ body {
     color: #fff;
 }
 
-/* Responsive 1024px - 1440px */
-@media only screen and (max-width: 1440px) {
-    .navbar-menu {
-        display: flex;
-        list-style-type: none;
-        gap: 16px;
-        padding-right: 16px;
-        color: #fff;
-        font-size: 16px;
-    }
-    .logo {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 10px;
-        margin-left: 10%;
-        padding: 0;
-    }
-    .right-navbar {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 0;
-    }
-    .header-title>h1 {
-        font-size: 30px;
-    }
-    .header-title>p {
-        font-size: 16px;
-        padding-top: 14px;
-    }
-    .header-wrapper-left {
-        display: flex;
-        flex-direction: column;
-        width: 35%;
-        gap: 50px;
-        margin-top: 3%;
-        margin-bottom: 3%;
-    }
-    .hamburger {
-        display: none;
-    }
-    .tentang-kami-container {
-        height: auto;
-    }
-    .right-article>button {
-        background-color: transparent;
-        color: #47B2E4;
-        border: 1px solid #47B2E4;
-        border-radius: 24px;
-        width: 100%;
-        padding: 10px;
-        border-radius: 10px;
-        margin-bottom: 5%;
-    }
-    .text-business-wrapper {
-        display: flex;
-        justify-content: space-between;
-        background-color: #fff;
-        width: 100%;
-        padding-right: 5px;
-    }
-    .card-business {
-        background-color: #fff;
-        display: flex;
-        flex-direction: column;
-        width: 20%;
-        height: 250px;
-        gap: 10px;
-        padding: 24px;
-        box-shadow: 1px 1px 20px 1px #37517E;
-        color: #37517E;
-    }
-    .card-pb-wrapper {
-        background-color: #fff;
-        width: 100%;
-        height: auto;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 20px;
-        box-shadow: 1px 1px 20px 1px #37517E;
-        flex-wrap: wrap;
-    }
-    .below-card-wrapper {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-left: 15%;
-        margin-right: 15%;
-        gap: 15%;
-        margin-top: 5%;
-        padding-bottom: 5%;
-    }
-    .card-plan-container {
-        display: flex;
-        justify-content: center;
-        gap: 20px;
-        margin-top: 48px;
-        position: relative;
-    }
-    .menu-content button {
-        background-color: transparent;
-        color: #47B2E4;
-        border: 1px solid #47B2E4;
-        border-radius: 24px;
-        padding: 10px 20px;
-        width: 15%;
-        margin-top: 24px;
-    }
-    .contact-container-main {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 5%;
-        margin-left: 5%;
-        margin-right: 5%;
-        margin-top: 5%;
-    }
+.footer-wrapper-1>div>p {
+    color: #4F4F4F;
 }
 
-@media only screen and (max-width: 1023px) {
-    .hamburger {
-        display: inline-block;
-        cursor: pointer;
-        background-color: transparent;
-        border: none;
-        margin-right: 24px;
-    }
-    .bar1,
-    .bar2,
-    .bar3 {
-        width: 30px;
-        height: 3px;
-        background-color: #fff;
-        border-radius: 15px;
-        margin: 8px;
-        transition: .5s;
-    }
-    .change .bar1 {
-        transform: translate(0, 11px) rotate(-45deg);
-    }
-    .change .bar2 {
-        opacity: 0;
-    }
-    .change .bar3 {
-        transform: translate(0, -11px) rotate(45deg);
-    }
-    .right-navbar {
-        display: none;
-    }
-    .logo {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 10px;
-        padding-left: 5%;
-    }
-    .header-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column-reverse;
-    }
-    .header-wrapper-right {
-        width: 50%;
-        margin-top: 5%;
-        padding-left: 0;
-    }
-    .header-wrapper-left {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        gap: 50px;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        margin-top: 24px;
-        margin-bottom: 24px;
-    }
-    .header-title>p {
-        font-size: 18px;
-        padding-top: 12px;
-    }
-    .tentang-kami-container {
-        height: auto;
-        width: 100%;
-    }
-    .article-container {
-        display: flex;
-        gap: 24px;
-        margin-top: 48px;
-        color: #4F4F4F;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    .left-article {
-        display: flex;
-        flex-direction: column;
-        width: 70%;
-        text-align: justify;
-        justify-content: center;
-        align-items: center;
-        margin-left: 0;
-    }
-    .right-article {
-        display: flex;
-        flex-direction: column;
-        width: 50%;
-        text-align: justify;
-        margin-right: 0;
-        margin-bottom: 5%;
-        gap: 48px;
-        justify-content: center;
-        align-items: center;
-    }
-    .right-article>button {
-        background-color: transparent;
-        color: #47B2E4;
-        border: 1px solid #47B2E4;
-        border-radius: 24px;
-        width: 70%;
-        padding: 10px;
-        border-radius: 10px;
-    }
-    .business-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        /* margin-left: 5%; */
-        /* margin-right: 5%; */
-        gap: 10%;
-        flex-direction: column-reverse;
-    }
-    .business-left {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        justify-content: center;
-        align-items: center;
-    }
-    .text-business-wrapper {
-        display: flex;
-        justify-content: space-between;
-        background-color: #fff;
-        width: 80%;
-        padding-right: 5px;
-    }
-    .card-text-business {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        width: 100%;
-        margin-left: 20%;
-    }
-    .business-section {
-        background-color: #F3F5FA;
-        width: 100%;
-        height: auto;
-    }
-    .business-wrapper-card {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 48px;
-        margin-top: 5%;
-        padding-bottom: 5%;
-    }
-    .card-business {
-        background-color: #fff;
-        display: flex;
-        flex-direction: column;
-        width: 50%;
-        height: auto;
-        gap: 10px;
-        padding: 24px;
-        box-shadow: 1px 1px 20px 1px #37517E;
-        color: #37517E;
-    }
-    .text-content {
-        color: #4F4F4F;
-        font-weight: 500;
-        text-align: center;
-        width: 100%;
-        margin-left: 0;
-        margin-right: 0;
-        margin-top: 18px;
-    }
-    .menu-content {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 24px;
-    }
-    .menu-content button {
-        background-color: transparent;
-        color: #47B2E4;
-        border: 1px solid #47B2E4;
-        border-radius: 24px;
-        padding: 10px 20px;
-        width: 15%;
-        margin-top: 24px;
-    }
-    .grid-container {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr;
-        gap: 10px;
-        margin-left: 15%;
-        margin-right: 15%;
-        margin-top: 48px;
-        margin-bottom: 5%;
-    }
-    #photo1 {
-        grid-column: 1 / span 5;
-    }
-    #photo2 {
-        grid-column: 6 / span 8;
-    }
-    #photo4 {
-        grid-column: 1 / span 4;
-        grid-row: 2;
-    }
-    #photo6 {
-        grid-column: 1 / span 4;
-        grid-row: 3;
-    }
-    #photo3 {
-        grid-column: 1 / span 5;
-        grid-row: 4;
-    }
-    #photo5 {
-        grid-column: 5 / span 8;
-        grid-row: 2 / span 2;
-    }
-    #photo7 {
-        grid-column: 6 / span 8;
-        grid-row: 4;
-    }
-    .card-pb-container {
-        display: flex;
-        flex-direction: column;
-        grid-template-columns: 50% 50%;
-        gap: 20px;
-        margin-left: 15%;
-        margin-right: 15%;
-        margin-top: 48px;
-    }
-    .below-card-wrapper {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin-left: 15%;
-        margin-right: 15%;
-        gap: 15%;
-    }
-    .below-card-wrapper {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        margin-left: 15%;
-        margin-right: 15%;
-        gap: 15%;
-        padding-bottom: 5%;
-    }
-    .text-content {
-        color: #4F4F4F;
-        font-weight: 500;
-        text-align: center;
-        width: 100%;
-        margin-left: 0;
-        margin-right: 0;
-        margin-top: 18px;
-        margin-bottom: 5%;
-    }
-    .card-plan-container {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        gap: 20px;
-        margin-top: 48px;
-        width: 70%;
-        height: 100%;
-        margin: auto;
-    }
-    .box-question {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        background-color: #fff;
-        width: 80%;
-        padding: 10px;
-    }
-    .contact-container-main {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 48px;
-        margin-left: 15%;
-        margin-right: 15%;
-        margin-top: 5%;
-    }
-    .footer-container {
-        display: flex;
-        gap: 5%;
-        margin-left: 5%;
-        margin-right: 5%;
-        margin-top: 5%;
-        padding-bottom: 5%;
-    }
-    .box-footer {
-        background-color: #37517E;
-        margin-top: 5%;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        height: 100px;
-        font-size: 10px;
-    }
-}
-
-/* Responsive mobile */
-@media only screen and (max-width: 426px) {
-    .logo {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 10px;
-        padding-left: 0;
-        margin-left: 5%;
-    }
-    .certification img {
-        width: 20%;
-    }
-    .right-article>button {
-        background-color: transparent;
-        color: #47B2E4;
-        border: 1px solid #47B2E4;
-        border-radius: 24px;
-        width: 100%;
-        padding: 10px;
-        border-radius: 10px;
-    }
-    .right-article {
-        display: flex;
-        flex-direction: column;
-        width: 80%;
-        text-align: justify;
-        margin-right: 0;
-        margin-bottom: 5%;
-        gap: 48px;
-        justify-content: center;
-        align-items: center;
-    }
-    .menu-content button {
-        background-color: transparent;
-        color: #47B2E4;
-        border: 1px solid #47B2E4;
-        border-radius: 24px;
-        padding: 10px 20px;
-        width: 20%;
-        margin-top: 24px;
-    }
-    .grid-container {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        margin-left: 15%;
-        margin-right: 15%;
-        margin-top: 48px;
-        margin-bottom: 5%;
-    }
-    .contact-container-left {
-        border-bottom: 10px solid #47B2E4;
-        border-top: 10px solid #47B2E4;
-        border-radius: 10px;
-        box-shadow: 1px 1px 20px 1px #37517E;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        gap: 48px;
-        padding: 48px;
-        font-size: 12px;
-    }
-    .map>img {
-        position: relative;
-        width: 100%;
-        height: 100%;
-    }
-    .contact-wrapper-right {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        padding: 48px;
-        font-size: 12px;
-    }
-    .footer-container {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        gap: 24px;
-        margin-top: 5%;
-        padding-bottom: 5%;
-        align-items: center;
-    }
-    .footer-wrapper-1 {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        width: 100%;
-        gap: 24px;
-    }
-    .footer-wrapper-2 {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-    }
-    .footer-wrapper-3 {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-    }
-    .box-footer {
-        background-color: #37517E;
-        margin-top: 5%;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        height: 100px;
-        font-size: 10px;
-    }
+.footer-wrapper-2>ul {
+    color: #4F4F4F;
 }
