--- a/CSS/style.css
+++ b/CSS/style.css
@@ -298,9 +298,8 @@ body {
     color: #4F4F4F;
     font-weight: 500;
     text-align: center;
-    width: 50%;
-    margin-left: 25%;
-    margin-top: 18px;
+    width: 80%;
+    margin: 24px auto;
 }
 
 .menu-content {
@@ -448,24 +447,23 @@ body {
 }
 
 /* Paket Join Section */
+.paket-join-section {
+    padding: 0 24px;
+}
+
 .card-plan-container {
     display: flex;
     justify-content: center;
     gap: 20px;
-    margin-top: 48px;
-    width: 80%;
-    height: auto;
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
+    max-width: 1200px;
+    margin: 48px auto;
 }
 
 .card-plan-wrapper {
     background-color: #fff;
     box-shadow: 1px 1px 20px 1px #ccc;
     padding: 24px;
-    margin-bottom: 5%;
-    width: 380px;
+    width: calc(100% / 3 );
     height: auto;
     border-radius: 12px;
 }
@@ -535,12 +533,22 @@ body {
     justify-content: space-between;
     align-items: center;
     background-color: #fff;
-    width: 50%;
+    width: 60%;
     padding: 10px;
     border-radius: 12px;
 }
 
+.box-text-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 /* KONTAK SECTION */
+.kontak {
+    padding: 0 24px;
+}
+
 .contact-container-left {
     border-bottom: 10px solid #47B2E4;
     border-top: 10px solid #47B2E4;
@@ -550,13 +558,14 @@ body {
     flex-direction: column;
     gap: 48px;
     padding: 24px;
+    width: calc(100% / 2);
+    height: auto;
 }
 
 .contact-wrapper-left {
     display: flex;
     align-items: center;
     gap: 24px;
-    width: 572px;
     height: auto;
 }
 
@@ -585,6 +594,8 @@ body {
     align-items: stretch;
     gap: 48px;
     margin-top: 48px;
+    max-width: 1200px;
+    margin: 48px auto;
 }
 
 .map>img {
@@ -598,7 +609,7 @@ body {
     border-top: 10px solid #47B2E4;
     border-radius: 10px;
     box-shadow: 1px 1px 20px 1px #37517E;
-    width: 572px;
+    width: calc(100% / 2);
     height: auto;
 }
 
@@ -667,10 +678,9 @@ body {
 /* Footer */
 .footer-container {
     display: flex;
-    gap: 5%;
-    margin-left: 15%;
-    margin-right: 15%;
-    margin-top: 5%;
+    justify-content: space-evenly;
+    align-items: stretch;
+    margin: 24px auto;
 }
 
 .footer-wrapper-1 {
@@ -747,7 +757,7 @@ body {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 100px;
+    padding: 24px 0;
 }
 
 .box-footer>p {
@@ -760,4 +770,54 @@ body {
 
 .footer-wrapper-2>ul {
     color: #4F4F4F;
+}
+
+/* Responsive DESKTOP */
+@media only screen and (min-width: 1024px) and (max-width: 1439px) {
+    /* Header and Navbar */
+    .navbar-menu {
+        font-size: 14px;
+    }
+    .btn-join>button {
+        padding: 5px 15px;
+    }
+    .header-title>h1 {
+        font-size: 35px;
+    }
+    .header-title>p {
+        font-size: 16px;
+        padding-top: 24px;
+    }
+    /* Tentang Kami Section */
+    .right-article>button {
+        width: 50%;
+    }
+    /* Business Section */
+    .business-section {
+        padding: 0 24px;
+    }
+    .text-business-wrapper {
+        width: 100%;
+        font-size: 16px;
+    }
+    .card-business {
+        width: 25%;
+        font-size: 16px;
+    }
+    /* Peluang Bisnis Section */
+    .card-pb-wrapper {
+        flex-direction: column;
+    }
+    .card-pb-container {
+        width: 80%;
+        margin: 48px auto;
+    }
+    .below-card-wrapper {
+        width: 80%;
+        margin: 0 auto;
+    }
+    /* Paket Join Section */
+    .card-list-plan>ul {
+        font-size: 14px;
+    }
 }
