--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1311,6 +1311,7 @@ body {
         font-size: 14px;
         flex-direction: column;
         align-items: center;
+        padding: 0 12px;
     }
     .logo-2 {
         display: flex;
