test merge (last version, same code)

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1306,7 +1306,7 @@ body {
         padding-bottom: 24px;
     }
 
-    /* FOOTER SECTION */
+    /* FOOTER SECTION. */
     .footer-container {
         font-size: 14px;
         flex-direction: column;
