fix error due to excessive curly braces

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,7 +14,7 @@ body {
 
 /* Humbuerger button */
 .toggle-btn {
-     display: none;
+    display: none;
 }
 
 /* Navbar Content */
@@ -300,7 +300,7 @@ body {
     width: 80%;
     margin: 24px auto;
     text-align: justify;
-
+}
 .menu-content {
     display: flex;
     justify-content: center;
