--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,6 +5,7 @@ body {
     padding: 0;
     box-sizing: border-box;
     font-family: "Inter";
+    scroll-behavior: smooth;
 }
 
 @font-face {
@@ -60,6 +61,12 @@ body {
     padding-right: 16px;
     color: #fff;
     font-size: 18px;
+}
+
+.navbar-menu>li:hover {
+    cursor: pointer;
+    border-radius: 10px;
+    color: #47B2E4;
 }
 
 /* Right Navbar */
